# BIL142-C-Proje

./: AsteroidKusagi.cpp  AsteroidKusagi.h  CMakeLists.txt  Event.h  Gemi.h  GucluGemi.h  HizliGemi.h  Kullanici.cpp  Kullanici.cpp~  Kullanici.h  NormalGemi.h  Oyun.cpp  Oyun.h  README.md  TerkEdilmisGezegen.cpp  TerkEdilmisGezegen.h  UzayKorsanlari.cpp  UzayKorsanlari.h  main.cpp
